complete choose techWave

--- a/index.html
+++ b/index.html
@@ -56,14 +56,16 @@
         </div>
     </header>
     <!-- this is main section -->
-    <main class="px-40 py-20 bg-[rgba(26,11,46,1)]">
+    <main class="py-20 bg-[rgba(26,11,46,1)]">
         <!-- about section -->
-        <section class="h-[600px] w-full pb-20 text-center">
+        <section class="h-[500px] w-full text-center px-40 ">
             <h1 class="font-semibold text-5xl text-gray-50 pb-2">About the Podcast</h1>
-            <p class="font-normal text-base text-gray-400 pb-3">TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. We break down
+            <p class="font-normal text-base text-gray-400 pb-3">TechWave is your go-to podcast for staying ahead in the
+                fast-paced world of technology. We break down
                 complex topics into digestible insights, explore productivity strategies that actually work, and share
                 stories of personal growth from industry leaders.</p>
-            <p class="font-normal text-base text-gray-400 pb-36">Join thousands of young professionals and tech enthusiasts who start their day with TechWave. </p>
+            <p class="font-normal text-base text-gray-400 pb-36">Join thousands of young professionals and tech
+                enthusiasts who start their day with TechWave. </p>
             <div class="font-black text-5xl flex justify-between text-[#4af8a7]">
                 <div>150K+ <br><span class="font-normal text-base text-gray-400">Monthly Listeners</span></div>
                 <div>200+ <br><span class="font-normal text-base text-gray-400">Episodes Published </span></div>
@@ -72,6 +74,38 @@
 
             </div>
 
+        </section>
+        <!--this is Choose Section -->
+        <section class="bg-[#250a45] px-40 pb-36">
+            <h1 class="font-bold text-5xl text-gray-50 text-center pb-10 pt-20">Why Choose TechWave</h1>
+            <div class="grid grid-cols-3 grid-rows-3 gap-7">
+                 <div class=" items-center  col-span-1 row-span-2 rounded-4xl bg-[#482a6d] p-3">
+                    <img class="mt-16" src="./assets/headphone.png" alt="">
+                    <h3 class="font-bold text-2xl text-gray-100 py-4">Premium Audio Quality</h3>
+                    <p class="font-normal text-base text-gray-400">Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+                 </div>
+                 <div class=" items-center col-span-2 row-span-1 rounded-4xl bg-[#482a6d] p-3">
+                    <img src="./assets/device.png" alt="">
+                    <h3 class="font-bold text-2xl text-gray-100 py-4">Mobile Friendly</h3>
+                    <p class="font-normal text-base text-gray-400">Listen on the go with seamless mobile experience and offline downloads.</p>
+                 </div>
+                 <div class=" items-center col-span-2 row-span-1 rounded-4xl bg-[#482a6d] p-3">
+                    <img src="./assets/location.png" alt="">
+                    <h3 class="font-bold text-2xl text-gray-100 py-4">Global Community</h3>
+                    <p class="font-normal text-base text-gray-400">Connect with tech enthusiasts from over 120 countries worldwide.</p>
+                 </div>
+                 <div class=" items-center col-span-2 row-span-1 rounded-4xl bg-[#482a6d] p-3">
+                    <img src="./assets/zap-fast.png" alt="">
+                    <h3 class="font-bold text-2xl text-gray-100 py-4">Exclusive Interviews</h3>
+                    <p class="font-normal text-base text-gray-400">Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+                 </div>
+                 <div class=" items-center rounded-4xl bg-[#482a6d] p-3">
+                    <img src="./assets/resource.png" alt="">
+                    <h3 class="font-bold text-2xl text-gray-100 py-4">Rich Resources</h3>
+                    <p class="font-normal text-base text-gray-400">Access show notes, transcripts, and additional learning materials for every episode. </p>
+                 </div>
+
+            </div>
         </section>
     </main>
     <!-- this is footer section -->
