--- a/index.html
+++ b/index.html
@@ -76,39 +76,105 @@
 
         </section>
         <!--this is Choose Section -->
-        <section class="bg-[#250a45] px-40 pb-36">
+        <section class="bg-[#250a45] px-40 pb-24">
             <h1 class="font-bold text-5xl text-gray-50 text-center pb-10 pt-20">Why Choose TechWave</h1>
             <div class="grid grid-cols-3 grid-rows-3 gap-7">
-                 <div class=" items-center  col-span-1 row-span-2 rounded-4xl bg-[#482a6d] p-3">
+                <div class=" items-center  col-span-1 row-span-2 rounded-4xl bg-[#482a6d] p-3">
                     <img class="mt-16" src="./assets/headphone.png" alt="">
-                    <h3 class="font-bold text-2xl text-gray-100 py-4">Premium Audio Quality</h3>
-                    <p class="font-normal text-base text-gray-400">Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
-                 </div>
-                 <div class=" items-center col-span-2 row-span-1 rounded-4xl bg-[#482a6d] p-3">
+                    <h3 class="font-bold text-2xl text-gray-100 y-4">Premium Audio Quality</h3>
+                    <p class="font-normal text-base text-gray-400">Experience crystal-clear sound with
+                        professional-grade recording equipment and expert audio engineering. Every episode is mastered
+                        for optimal listening across all devices and platforms.</p>
+                </div>
+                <div class=" items-center col-span-2 row-span-1 rounded-4xl bg-[#482a6d] p-3">
                     <img src="./assets/device.png" alt="">
                     <h3 class="font-bold text-2xl text-gray-100 py-4">Mobile Friendly</h3>
-                    <p class="font-normal text-base text-gray-400">Listen on the go with seamless mobile experience and offline downloads.</p>
-                 </div>
-                 <div class=" items-center col-span-2 row-span-1 rounded-4xl bg-[#482a6d] p-3">
+                    <p class="font-normal text-base text-gray-400">Listen on the go with seamless mobile experience and
+                        offline downloads.</p>
+                </div>
+                <div class=" items-center col-span-2 row-span-1 rounded-4xl bg-[#482a6d] p-3">
                     <img src="./assets/location.png" alt="">
                     <h3 class="font-bold text-2xl text-gray-100 py-4">Global Community</h3>
-                    <p class="font-normal text-base text-gray-400">Connect with tech enthusiasts from over 120 countries worldwide.</p>
-                 </div>
-                 <div class=" items-center col-span-2 row-span-1 rounded-4xl bg-[#482a6d] p-3">
+                    <p class="font-normal text-base text-gray-400">Connect with tech enthusiasts from over 120 countries
+                        worldwide.</p>
+                </div>
+                <div class=" items-center col-span-2 row-span-1 rounded-4xl bg-[#482a6d] p-3">
                     <img src="./assets/zap-fast.png" alt="">
                     <h3 class="font-bold text-2xl text-gray-100 py-4">Exclusive Interviews</h3>
-                    <p class="font-normal text-base text-gray-400">Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
-                 </div>
-                 <div class=" items-center rounded-4xl bg-[#482a6d] p-3">
+                    <p class="font-normal text-base text-gray-400">Get unprecedented access to industry titans, startup
+                        founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere
+                        else, diving deep into their journeys, failures, and success strategies.</p>
+                </div>
+                <div class=" items-center rounded-4xl bg-[#482a6d] p-3">
                     <img src="./assets/resource.png" alt="">
                     <h3 class="font-bold text-2xl text-gray-100 py-4">Rich Resources</h3>
-                    <p class="font-normal text-base text-gray-400">Access show notes, transcripts, and additional learning materials for every episode. </p>
-                 </div>
+                    <p class="font-normal text-base text-gray-400">Access show notes, transcripts, and additional
+                        learning materials for every episode. </p>
+                </div>
 
             </div>
         </section>
+
+        <!--this is Featured Episodes section -->
+        <section class="py-24 px-40">
+            <h1 class="font-bold text-5xl text-gray-50 text-center pb-10">Featured Episodes</h1>
+            <div class="grid grid-cols-3 gap-1.5">
+                <div class="bg-[#1a1230] rounded-2xl overflow-hidden shadow-lg w-[300px]">
+                    <iframe width="100%" height="214"
+                        src="https://www.youtube.com/embed/oX7OduG1YmI?si=K5S118GTPnRBAsTa" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                    <div class="p-5">
+                        <h3 class="font-bold text-2xl text-gray-100 py-4">The Future Mark Zuckerberg Is Trying To Build
+                        </h3>
+                        <p class="font-normal text-base text-gray-400 pb-2.5"> To paint a picture of the future Mark
+                            Zuckerberg is trying to build, so that you can decide for yourself what you think of it.</p>
+                        <div class="flex text-lg font-semibold text-green-500 gap-2"><span><img src="./assets/clock.png"
+                                    alt=""></span>47</div>
+                    </div>
+                </div>
+                <div class="bg-[#1a1230] rounded-2xl overflow-hidden shadow-lg w-[300px]">
+                    <iframe width="100%" height="214"
+                        src="https://www.youtube.com/embed/7eAh7uEFhdg?si=NhXkqZtijjwlv6NL" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                    <div class="p-5">
+                        <h3 class="font-bold text-2xl text-gray-100 py-4">How to Build Great Teams</h3>
+                        <p class="font-normal text-base text-gray-400 pb-2.5">Jocko Willink is a retired Navy SEAL
+                            officer and author of multiple books on effective leadership and teamwork, self-discipline
+                            and mindset, and host of the Jocko Podcast.</p>
+                        <div class="flex text-lg font-semibold text-green-500 gap-2"><span><img src="./assets/clock.png"
+                                    alt=""></span>7</div>
+                    </div>
+                </div>
+                <div class="bg-[#1a1230] rounded-2xl overflow-hidden shadow-lg w-[300px]">
+                    <iframe width="100%" height="214"
+                        src="https://www.youtube.com/embed/QQ4UyZNXof8?si=1RMRTW1eig1UOv2S" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                    <div class="p-5">
+                        <h3 class="font-bold text-2xl text-gray-100 py-4">How AI is Changing DevOps Careers</h3>
+                        <p class="font-normal text-base text-gray-400 pb-2.5"> In this video I sat down with Bret Fisher
+                            - Docker Captain and DevOps educator who spent 2 years walking around conferences asking
+                            engineers one question: Are you actually using AI in DevOps?
+                        </p>
+                        <div class="flex text-lg font-semibold text-green-500 gap-2"><span><img src="./assets/clock.png"
+                                    alt=""></span>57</div>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </section>
     </main>
-    <!-- this is footer section -->
+    <!-- this is footer section -
     <footer></footer>
 </body>
 
