--- a/index.html
+++ b/index.html
@@ -173,9 +173,54 @@
 
 
         </section>
+
+        <!--this is Meet the Host section -->
+        <section class="px-40">
+
+            <h1 class="font-bold text-5xl text-gray-50 text-center pb-10">Meet The Host</h1>
+            <div class="flex gap-6 p-10 rounded-4xl bg-[#250b47]">
+                <div class="h-48 w-56"><img class="h-full max-w-fit" src="./assets/host.png" alt=""></div>
+                <div>
+                    <h1 class="font-bold text-3xl text-gray-100">Alex Kumar</h1>
+                    <p class="font-normal text-base text-gray-400 p-2.5 pl-0"> Tech entrepreneur, productivity expert,
+                        and lifelong learner. Alex has been in the tech industry for over 10 years, working with
+                        startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders
+                        and practical advice for anyone looking to grow in tech.</p>
+                    <div>
+                        <ul class="flex gap-3">
+                            <li class=" border border-solid border-gray-200 rounded-4xl p-3"><img class="h-5 w-5"
+                                    src="./assets/linkedin.png" alt=""></li>
+                            <li class=" border border-solid border-gray-200 rounded-4xl p-3"><img class="h-5 w-5"
+                                    src="./assets/x.png" alt=""></li>
+                            <li class=" border border-solid border-gray-200 rounded-4xl p-3"><img class="h-5 w-5"
+                                    src="./assets/instagram.png" alt=""></li>
+                            <li class=" border border-solid border-gray-200 rounded-4xl p-3"><img class="h-5 w-5"
+                                    src="./assets/youtube.png" alt=""></li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </main>
-    <!-- this is footer section -
-    <footer></footer>
+
+    <footer class=" bg-[url('./assets/footer-bg.png')] bg-center bg-cover h-[400px]">
+        <div class="">
+            <h1><img class="justify-center ite" src="./assets/TechWave.png" alt=""></h1>
+            <div>
+                <ul class="flex">
+                    <li><a href=""><img src="./assets/spotify.png" alt=""><span class="flex">Spotify</span></a></li>
+                    <li><a href=""><img src="./assets/apple-podcast.png" alt="">Apple Podcast</a></li>
+                    <li><a href=""><img src="./assets/youtube.png" alt="">YouTube</a></li>
+                    <li><a href=""><img src="./assets/twitter.png" alt="">Twitter</a></li>
+                </ul>
+            </div>
+
+        </div>
+
+
+    </footer>
 </body>
 
 </html>
