--- a/index.html
+++ b/index.html
@@ -14,42 +14,43 @@
     <!-- this is header section -->
     <header class="">
         <!-- this is navbar section -->
-        <nav class="py-8 px-40 border-b border-b-gray-400 flex justify-between bg-[rgba(26,11,46,1)]">
+        <nav class="py-3 lg:py-8 px-5 lg:px-40 border-b border-b-gray-400 flex justify-between bg-[rgba(26,11,46,1)]">
             <div><img src="./assets/TechWave.png" alt=""></div>
-            <div>
+            <div class="block mt-3 lg:hidden"><img src="./assets/hamburger-menu.png" alt=""></div>
+            <div class="hidden lg:block">
                 <ul class="flex gap-5 text-white">
                     <li><a href="">About</a></li>
                     <li><a href="">Episode</a></li>
                     <li><a href="">Host</a></li>
                 </ul>
             </div>
-            <div><button
-                    class="bg-[linear-gradient(47.64deg,rgba(247,233,63,1),rgba(251,9,180,1),rgba(145,0,248,1))] text-white px-4 py-3 rounded-3xl hover:scale-102 transition-transform duration-300">Subscribe</button>
+            <div class="hidden lg:block"><button
+                    class="bg-[linear-gradient(47.64deg,rgba(247,233,63,1),rgba(251,9,180,1),rgba(145,0,248,1))] text-white px-4 py-3 rounded-3xl hover:scale-102 transition-transform duration-300 flex gap-2">Subscribe <span class="mt-1"><img src="./assets/ArrowRight.png" alt=""></span></button> 
             </div>
         </nav>
         <!-- this is banner section -->
-        <div class=" relative h-[730px] bg-[url('./assets/hero-bg.png')] bg-center bg-cover">
+        <div class=" relative h-[466px] lg:h-[730px] bg-[url('./assets/hero-bg.png')] bg-center bg-cover">
             <div class="flex justify-center ">
 
                 <div class="flex justify-center items-start">
-                    <h3 class="px-4 py-2 font-semibold text-black rounded-4xl bg-emerald-300 absolute mt-30 ml-52">NEW
+                    <h3 class="px-4 py-2 font-semibold text-black rounded-4xl bg-emerald-300 absolute mt-20 lg:mt-30  ml-40 lg:ml-52">NEW
                     </h3>
-                    <img class="w-[340px] h-[340px] mt-24" src="./assets/hero-circle.png" alt="">
+                    <img class="w-52 lg:w-[340px] h-52 lg:h-[340px] mt-16 lg:mt-24" src="./assets/hero-circle.png" alt="">
 
                 </div>
-                <img class="h-48 w-48 absolute mt-40 px-10 pt-2 pb-3" src="./assets/microphone.png" alt="">
+                <img class="h-20 lg:h-48 lg:w-48 absolute mt-32 lg:mt-40 px-10 lg:pt-2 lg:pb-3" src="./assets/microphone.png" alt="">
 
             </div>
             <div class="mt-10 text-center">
-                <h1 class="font-extrabold text-6xl text-gray-50 p-2">TechWave</h1>
-                <p class="pt-2 pb-6 text-gray-400">Your daily dose of tech insights, productivity hacks, and personal
+                <h1 class="font-extrabold text-[40px] lg:text-6xl text-gray-50 p-2">TechWave</h1>
+                <p class="lg:pt-2 px-3 lg:px-0 pb-3.5 lg:pb-6 text-gray-400">Your daily dose of tech insights, productivity hacks, and personal
                     growth</p>
                 <div class="flex text-center justify-center gap-2">
                     <button
                         class="flex gap-2 px-5 py-3 rounded-4xl bg-[linear-gradient(47.64deg,rgba(247,233,63,1),rgba(251,9,180,1),rgba(145,0,248,1))] font-semibold text-base text-gray-50 hover:scale-102 transition-transform duration-300">
-                        <span><img src="./assets/spotify.png" alt=""></span>Listen On Spotify</button>
+                        <span><img class="mt-1" src="./assets/spotify.png" alt=""></span>Listen On Spotify</button>
                     <button
-                        class="flex gap-2 px-5 py-3 rounded-4xl font-semibold text-base text-green-400 border border-emerald-300 hover:scale-102 transition-transform duration-300"><span><img
+                        class="flex gap-2 px-5 py-3 rounded-4xl font-semibold text-base text-green-400 border border-emerald-300 hover:scale-102 transition-transform duration-300"><span><img class="mt-1"
                                 src="./assets/message.png" alt=""></span>Subscribe</button>
                 </div>
             </div>
@@ -58,15 +59,15 @@
     <!-- this is main section -->
     <main class="py-20 bg-[rgba(26,11,46,1)]">
         <!-- about section -->
-        <section class="h-[500px] w-full text-center px-40 ">
-            <h1 class="font-semibold text-5xl text-gray-50 pb-2">About the Podcast</h1>
+        <section class="lg:h-[500px] w-full text-center px-5 lg:px-40 py-6  lg:py-0">
+            <h1 class=" font-bold lg:font-semibold text-3xl lg:text-5xl text-gray-50 pb-2">About the Podcast</h1>
             <p class="font-normal text-base text-gray-400 pb-3">TechWave is your go-to podcast for staying ahead in the
                 fast-paced world of technology. We break down
                 complex topics into digestible insights, explore productivity strategies that actually work, and share
                 stories of personal growth from industry leaders.</p>
-            <p class="font-normal text-base text-gray-400 pb-36">Join thousands of young professionals and tech
+            <p class="font-normal text-base text-gray-400 pb-12 lg:pb-36">Join thousands of young professionals and tech
                 enthusiasts who start their day with TechWave. </p>
-            <div class="font-black text-5xl flex justify-between text-[#4af8a7]">
+            <div class="font-black text-4xl lg:text-5xl grid grid-cols-2 gap-4 lg:gap-0lg:flex justify-between text-[#4af8a7]">
                 <div>150K+ <br><span class="font-normal text-base text-gray-400">Monthly Listeners</span></div>
                 <div>200+ <br><span class="font-normal text-base text-gray-400">Episodes Published </span></div>
                 <div>4.9* <br><span class="font-normal text-base text-gray-400">Average Rating</span></div>
@@ -131,7 +132,7 @@
                         </h3>
                         <p class="font-normal text-base text-gray-400 pb-2.5"> To paint a picture of the future Mark
                             Zuckerberg is trying to build, so that you can decide for yourself what you think of it.</p>
-                        <div class="flex text-lg font-semibold text-green-500 gap-2"><span><img src="./assets/clock.png"
+                        <div class="flex text-lg font-semibold text-green-500 gap-2"><span><img class="mt-1.5" src="./assets/clock.png"
                                     alt=""></span>47</div>
                     </div>
                 </div>
@@ -147,7 +148,7 @@
                         <p class="font-normal text-base text-gray-400 pb-2.5">Jocko Willink is a retired Navy SEAL
                             officer and author of multiple books on effective leadership and teamwork, self-discipline
                             and mindset, and host of the Jocko Podcast.</p>
-                        <div class="flex text-lg font-semibold text-green-500 gap-2"><span><img src="./assets/clock.png"
+                        <div class="flex text-lg font-semibold text-green-500 gap-2"><span><img class="mt-1.5" src="./assets/clock.png"
                                     alt=""></span>7</div>
                     </div>
                 </div>
@@ -164,7 +165,7 @@
                             - Docker Captain and DevOps educator who spent 2 years walking around conferences asking
                             engineers one question: Are you actually using AI in DevOps?
                         </p>
-                        <div class="flex text-lg font-semibold text-green-500 gap-2"><span><img src="./assets/clock.png"
+                        <div class="flex text-lg font-semibold text-green-500 gap-2"><span><img class="mt-1.5" src="./assets/clock.png"
                                     alt=""></span>57</div>
                     </div>
                 </div>
@@ -204,13 +205,13 @@
 
         </section>
     </main>
-
+    <!-- 
     <footer class=" bg-[url('./assets/footer-bg.png')] bg-center bg-cover h-[400px]">
-        <div class="">
-            <h1><img class="justify-center ite" src="./assets/TechWave.png" alt=""></h1>
-            <div>
-                <ul class="flex">
-                    <li><a href=""><img src="./assets/spotify.png" alt=""><span class="flex">Spotify</span></a></li>
+        <div class="relative justify-center">
+            <h1><img class="absolute items-center text-center justify-center " src="./assets/TechWave.png" alt=""></h1>
+            <div class="flex gap-2">
+                <ul class="">
+                    <li class="flex gap-2"><a href=""><img src="./assets/spotify.png" alt=""><span class="">Spotify</span></a></li>
                     <li><a href=""><img src="./assets/apple-podcast.png" alt="">Apple Podcast</a></li>
                     <li><a href=""><img src="./assets/youtube.png" alt="">YouTube</a></li>
                     <li><a href=""><img src="./assets/twitter.png" alt="">Twitter</a></li>
@@ -220,7 +221,45 @@
         </div>
 
 
+    </footer> -->
+
+    <footer class="bg-[url('./assets/footer-bg.png')] bg-center bg-cover h-[400px]">
+        <div class="h-full flex flex-col items-center justify-center gap-8 text-gray-300">
+
+            <img class="w-96 h-14" src="./assets/TechWave.png" alt="TechWave">
+
+            <ul class="flex gap-10 ">
+
+                <li>
+                    <a href="#" class="flex items-center gap-2 hover:scale-110 transition">
+                        <img src="./assets/spotify.png" class="w-6" alt=""><span>Spotify</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="flex items-center gap-2 hover:scale-110 transition">
+                        <img src="./assets/apple-podcast.png" class="w-6" alt=""><span>Apple Podcast</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="flex items-center gap-2 hover:scale-110 transition">
+                        <img src="./assets/youtube-podcast.png" class="w-6" alt=""><span>Youtube</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="flex items-center gap-2 hover:scale-110 transition">
+                        <img src="./assets/twitter.png" class="w-6" alt=""><span>Twitter</span>
+                    </a>
+                </li>
+
+            </ul>
+            <p class="text-gray-400"> © 2026 TechWave Podcast. All rights reserved.</p>
+
+        </div>
     </footer>
+
 </body>
 
 </html>
