add hover effect

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </ul>
             </div>
             <div class="hidden lg:block"><button
-                    class="bg-[linear-gradient(47.64deg,rgba(247,233,63,1),rgba(251,9,180,1),rgba(145,0,248,1))] text-white px-4 py-3 rounded-3xl hover:scale-102 transition-transform duration-300 flex gap-2">Subscribe
+                    class="bg-[linear-gradient(47.64deg,rgba(247,233,63,1),rgba(251,9,180,1),rgba(145,0,248,1))] text-white px-4 py-3 rounded-3xl hover:scale-105 transition-transform duration-400 flex gap-2">Subscribe
                     <span class="mt-1"><img src="./assets/ArrowRight.png" alt=""></span></button>
             </div>
         </nav>
@@ -35,15 +35,15 @@
 
                 <div class="flex justify-center items-start">
                     <h3
-                        class="px-4 py-2 font-semibold text-black rounded-4xl bg-emerald-300 absolute mt-20 lg:mt-30  ml-40 lg:ml-52">
+                        class="px-4 py-2 font-semibold text-black rounded-4xl bg-emerald-300 absolute mt-20 lg:mt-30  ml-40 lg:ml-52 hover:scale-110 transition-transform duration-500">
                         NEW
                     </h3>
                     <img class="w-52 lg:w-[340px] h-52 lg:h-[340px] mt-16 lg:mt-24" src="./assets/hero-circle.png"
                         alt="">
 
                 </div>
-                <img class="h-20 lg:h-48 lg:w-48 absolute mt-32 lg:mt-40 px-10 lg:pt-2 lg:pb-3"
-                    src="./assets/microphone.png" alt="">
+                <img class="h-20 lg:h-48 lg:w-48 absolute mt-32 lg:mt-40 px-10 lg:pt-2 lg:pb-3 hover:scale-110 transition-transform duration-500
+" src="./assets/microphone.png" alt="">
 
             </div>
             <div class="mt-10 text-center">
@@ -66,7 +66,8 @@
     <main class="py-20 bg-[#230f3c]">
         <!-- about section -->
         <section class="lg:h-[500px] w-full text-center px-5 lg:px-40 py-6  lg:py-0 ">
-            <h1 class=" font-bold lg:font-semibold text-3xl lg:text-5xl text-gray-50 pb-2 lg:pb-8">About the Podcast</h1>
+            <h1 class=" font-bold lg:font-semibold text-3xl lg:text-5xl text-gray-50 pb-2 lg:pb-8">About the Podcast
+            </h1>
             <p class="font-normal text-base text-gray-400 pb-3">TechWave is your go-to podcast for staying ahead in the
                 fast-paced world of technology. We break down
                 complex topics into digestible insights, explore productivity strategies that actually work, and share
@@ -88,35 +89,39 @@
             <h1 class="font-bold text-3xl lg:text-5xl text-gray-50 text-center pb-8 lg:pb-10 pt-1 lg:pt-20">Why Choose
                 TechWave</h1>
             <div class="grid  lg:grid-cols-3 lg:grid-rows-3 gap-7">
-                <div
-                    class=" items-center col-span-2 lg:col-span-1 row-span-1 lg:row-span-2 rounded-4xl bg-[#482a6d] p-3">
+                <div class=" items-center col-span-2 lg:col-span-1 row-span-1 lg:row-span-2 rounded-4xl bg-[#482a6d] p-3
+                    hover:-translate-y-2 hover:scale-105 transition-all duration-300 ease-out hover:shadow-xl
+">
                     <img class="lg:mt-16" src="./assets/headphone.png" alt="">
                     <h3 class="font-bold text-2xl text-gray-100 y-4">Premium Audio Quality</h3>
                     <p class="font-normal text-base text-gray-400">Experience crystal-clear sound with
                         professional-grade recording equipment and expert audio engineering. Every episode is mastered
                         for optimal listening across all devices and platforms.</p>
                 </div>
-                <div class=" items-center col-span-2 row-span-1 rounded-4xl bg-[#482a6d] p-3">
+                <div class=" items-center col-span-2 row-span-1 rounded-4xl bg-[#482a6d] p-3 hover:-translate-y-2 hover:scale-105 transition-all duration-300 ease-out hover:shadow-xl
+">
                     <img src="./assets/device.png" alt="">
                     <h3 class="font-bold text-2xl text-gray-100 py-4">Mobile Friendly</h3>
                     <p class="font-normal text-base text-gray-400">Listen on the go with seamless mobile experience and
                         offline downloads.</p>
                 </div>
-                <div class=" items-center col-span-2 row-span-1 rounded-4xl bg-[#482a6d] p-3">
+                <div class=" items-center col-span-2 row-span-1 rounded-4xl bg-[#482a6d] p-3 hover:-translate-y-2 hover:scale-105 transition-all duration-300 ease-out hover:shadow-xl
+">
                     <img src="./assets/location.png" alt="">
                     <h3 class="font-bold text-2xl text-gray-100 py-4">Global Community</h3>
                     <p class="font-normal text-base text-gray-400">Connect with tech enthusiasts from over 120 countries
                         worldwide.</p>
                 </div>
-                <div class=" items-center col-span-2 row-span-1 rounded-4xl bg-[#482a6d] p-3">
+                <div class=" items-center col-span-2 row-span-1 rounded-4xl bg-[#482a6d] p-3 hover:-translate-y-2 hover:scale-105 transition-all duration-300 ease-out hover:shadow-xl
+">
                     <img src="./assets/zap-fast.png" alt="">
                     <h3 class="font-bold text-2xl text-gray-100 py-4">Exclusive Interviews</h3>
                     <p class="font-normal text-base text-gray-400">Get unprecedented access to industry titans, startup
                         founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere
                         else, diving deep into their journeys, failures, and success strategies.</p>
                 </div>
-                <div
-                    class=" items-center rounded-4xl bg-[#482a6d] p-3 col-span-2 lg:col-span-1 row-span-1 lg:row-span-1">
+                <div class=" items-center rounded-4xl bg-[#482a6d] p-3 col-span-2 lg:col-span-1 row-span-1 lg:row-span-1 hover:-translate-y-2 hover:scale-105 transition-all duration-300 ease-out hover:shadow-xl
+">
                     <img src="./assets/resource.png" alt="">
                     <h3 class="font-bold text-2xl text-gray-100 py-4">Rich Resources</h3>
                     <p class="font-normal text-base text-gray-400">Access show notes, transcripts, and additional
@@ -130,7 +135,7 @@
         <section class="py-9 lg:py-24 px-5 lg:px-40">
             <h1 class="font-bold text-4xl lg:text-5xl text-gray-50 text-center pb-6 lg:pb-10">Featured Episodes</h1>
             <div class="grid lg:grid-cols-3 gap-4 lg:gap-1.5">
-                <div class="bg-[#1a1230] rounded-2xl overflow-hidden shadow-lg lg:w-[300px]">
+                <div class="bg-[#1a1230] rounded-2xl overflow-hidden shadow-lg lg:w-[300px] hover:scale-102 transition-transform duration-300">
                     <iframe width="100%" height="214"
                         src="https://www.youtube.com/embed/oX7OduG1YmI?si=K5S118GTPnRBAsTa" title="YouTube video player"
                         frameborder="0"
@@ -147,7 +152,7 @@
                                     src="./assets/clock.png" alt=""></span>47</div>
                     </div>
                 </div>
-                <div class="bg-[#1a1230] rounded-2xl overflow-hidden shadow-lg lg:w-[300px]">
+                <div class="bg-[#1a1230] rounded-2xl overflow-hidden shadow-lg lg:w-[300px] hover:scale-102 transition-transform duration-300">
                     <iframe width="100%" height="214"
                         src="https://www.youtube.com/embed/7eAh7uEFhdg?si=NhXkqZtijjwlv6NL" title="YouTube video player"
                         frameborder="0"
@@ -163,7 +168,7 @@
                                     src="./assets/clock.png" alt=""></span>7</div>
                     </div>
                 </div>
-                <div class="bg-[#1a1230] rounded-2xl overflow-hidden shadow-lg lg:w-[300px]">
+                <div class="bg-[#1a1230] rounded-2xl overflow-hidden shadow-lg lg:w-[300px] hover:scale-102 transition-transform duration-300">
                     <iframe width="100%" height="214"
                         src="https://www.youtube.com/embed/QQ4UyZNXof8?si=1RMRTW1eig1UOv2S" title="YouTube video player"
                         frameborder="0"
@@ -188,7 +193,7 @@
         </section>
 
         <!--this is Meet the Host section -->
-        <section class="px-5 lg:px-40">
+        <section class="px-5 lg:px-40 ">
 
             <h1 class="font-bold text-4xl lg:text-5xl text-gray-50 text-center pb-7 lg:pb-10">Meet The Host</h1>
 
