--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="">
         <!-- this is navbar section -->
         <nav class="py-3 lg:py-8 px-5 lg:px-40 border-b border-b-gray-400 flex justify-between bg-[rgba(26,11,46,1)]">
-            <div><img src="./assets/TechWave.png" alt=""></div>
+            <div><img class="animate-fadeup-loop" src="./assets/TechWave.png" alt=""></div>
             <div class="block mt-3 lg:hidden"><img src="./assets/hamburger-menu.png" alt=""></div>
             <div class="hidden lg:block">
                 <ul class="flex gap-5 text-white">
@@ -30,12 +30,12 @@
             </div>
         </nav>
         <!-- this is banner section -->
-        <div class=" relative h-[466px] lg:h-[730px] bg-[url('./assets/hero-bg.png')] bg-center bg-cover">
+        <div class=" relative  lg:h-[730px] bg-[url('./assets/hero-bg.png')] bg-center bg-cover">
             <div class="flex justify-center ">
 
                 <div class="flex justify-center items-start">
                     <h3
-                        class="px-4 py-2 font-semibold text-black rounded-4xl bg-emerald-300 absolute mt-20 lg:mt-30  ml-40 lg:ml-52 hover:scale-110 transition-transform duration-500">
+                        class="px-4 py-2 font-semibold text-black rounded-4xl bg-emerald-300 absolute mt-20 lg:mt-30  ml-40 lg:ml-52 hover:scale-110 transition-transform duration-500 animate-bounce ">
                         NEW
                     </h3>
                     <img class="w-52 lg:w-[340px] h-52 lg:h-[340px] mt-16 lg:mt-24" src="./assets/hero-circle.png"
@@ -47,17 +47,17 @@
 
             </div>
             <div class="mt-10 text-center">
-                <h1 class="font-extrabold text-[40px] lg:text-6xl text-gray-50 p-2">TechWave</h1>
-                <p class="lg:pt-2 px-3 lg:px-0 pb-3.5 lg:pb-6 text-gray-400">Your daily dose of tech insights,
+                <h1 class="font-extrabold text-[40px] lg:text-6xl text-gray-50 p-2 animate-fadeup-loop">TechWave</h1>
+                <p class="lg:pt-2 px-3 lg:px-0 pb-3.5 lg:pb-6 text-gray-400 animate-slide-loop">Your daily dose of tech insights,
                     productivity hacks, and personal
                     growth</p>
                 <div class="flex text-center justify-center gap-2">
                     <button
                         class="flex gap-2 px-5 py-3 rounded-4xl bg-[linear-gradient(47.64deg,rgba(247,233,63,1),rgba(251,9,180,1),rgba(145,0,248,1))] font-semibold text-base text-gray-50 hover:scale-102 transition-transform duration-300">
-                        <span><img class="mt-1" src="./assets/spotify.png" alt=""></span>Listen On Spotify</button>
+                        <span><img class="mt-1 animate-ping" src="./assets/spotify.png" alt=""></span>Listen On Spotify</button>
                     <button
                         class="flex gap-2 px-5 py-3 rounded-4xl font-semibold text-base text-green-400 border border-emerald-300 hover:scale-102 transition-transform duration-300"><span><img
-                                class="mt-1" src="./assets/message.png" alt=""></span>Subscribe</button>
+                                class="mt-1 animate-spin" src="./assets/message.png" alt=""></span>Subscribe</button>
                 </div>
             </div>
         </div>
@@ -75,7 +75,7 @@
             <p class="font-normal text-base text-gray-400 pb-12 lg:pb-20">Join thousands of young professionals and tech
                 enthusiasts who start their day with TechWave. </p>
             <div
-                class="font-black text-4xl lg:text-5xl grid grid-cols-2 gap-4 lg:gap-0lg:flex justify-between text-[#4af8a7]">
+                class="font-black text-4xl lg:text-5xl grid grid-cols-2 gap-4 lg:gap-0 lg:flex justify-between text-[#4af8a7]">
                 <div>150K+ <br><span class="font-normal text-base text-gray-400">Monthly Listeners</span></div>
                 <div>200+ <br><span class="font-normal text-base text-gray-400">Episodes Published </span></div>
                 <div>4.9* <br><span class="font-normal text-base text-gray-400">Average Rating</span></div>
@@ -199,7 +199,7 @@
 
             <div class="lg:flex gap-6 p-10 rounded-4xl bg-[#250b47]
             flex flex-col items-center text-center
-            lg:flex-row lg:items-start lg:text-left">
+            lg:flex-row lg:items-start lg:text-left animate-pulse">
 
                 <div class="h-48 w-56">
                     <img class="h-full max-w-fit" src="./assets/host.png" alt="">
